# fastapi-key-auth

./: .editorconfig  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  pyproject.toml  readme.md
.github/: dependabot.yml
.github/workflows/: build-test-release.yaml  ci.yml  codeql-analysis.yml  main.yml  release.yml
fastapi_key_auth/: __init__.py  authorizer.py
fastapi_key_auth/dependency/: __init__.py  authorizer.py
fastapi_key_auth/middleware/: authorizer.py
src/fastapi_key_auth/: __init__.py  utils.py
src/fastapi_key_auth/dependency/: authorizer.py
src/fastapi_key_auth/middleware/: __init__.py  authorizer.py
tests/: __init__.py  conftest.py  test_authorizer.py  test_custom_pattern.py  test_dependency_authorizer.py  test_dependency_custom_pattern.py  test_middleware_authorizer.py  test_middleware_custom_pattern.py
