[tool.poetry]
name = "fastapi-key-auth"
version = "0.15.2"
description = "API key validation Middleware"
authors = ["Benjamin Ramser <legionaerr@googlemail.com>"]
license = "MIT"
readme = "readme.md"
homepage = "https://github.com/iwpnd/fastapi-key-auth"
repository = "https://github.com/iwpnd/fastapi-key-auth"
keywords = ["fastapi", "api key", "security"]


[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.109.2"
starlette = ">=0.25.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pre-commit = ">=2.21,<4.0"
black = "^24.1.1"
gitlint = "^0.19.0"
poethepoet = ">=0.18.1,<0.25.0"
isort = "^5.11.5"
pytest-cov = "^4.0.0"
requests = "^2.28.2"
mypy = "^1.1.1"
httpx = ">=0.23.3,<0.27.0"
ruff = "^0.2.1"
python-semantic-release = "^8.7.0"

[mypy]
python_version = 3.9
ignore_missing_imports = true

[tool.ruff]
line-length = 88
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
target-version = "py39"


[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.semantic_release]
version_variables = [
    "fastapi_key_auth/__init__.py:__version__",
    "pyproject.toml:version"
]
commit_subject = "ci: release v{version}"
branch = "main"
upload_to_release = true
build_command = "pip install poetry && poetry build"

[tool.semantic_release.commit_parser_options]
allowed_tags = [
    "build",
    "chore",
    "ci",
    "docs",
    "feat",
    "fix",
    "perf",
    "style",
    "refactor",
    "test",
]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.poe.tasks]
test       = "poetry run pytest -vv -s tests/"
test-cov   = "poetry run pytest -vv -s --cov=fastapi_key_auth tests/"
mypy       = "poetry run mypy --ignore-missing-imports --config-file pyproject.toml"
lint       = "ruff ."

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
